--- a/style.css
+++ b/style.css
@@ -1,12 +1,26 @@
-h1{
-    margin-top: 80px;
-    margin-left: 120px;
-    padding-bottom: 40px;
-    }
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    padding-left: 120px;
-    padding-right: 80px;
+.buttonPropio {
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
+.githubButton {
+    background-color: blueviolet;
+}
+
+.vimeobButton {
+    background-color: dodgerblue;
+}
+
+.behanceButton {
+    background-color: blue;
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: white;
+    background-color: black;
+}
